--- a/notebooks/model_making.ipynb
+++ b/notebooks/model_making.ipynb
@@ -43,410 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv(config['data']['model_data'])\n",
     "upcoming_game = pd.read_csv('test6.csv')\n",
     "upcoming_game.columns = data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 319,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>game_date</th>\n",
-       "      <th>day</th>\n",
-       "      <th>round</th>\n",
-       "      <th>home_team</th>\n",
-       "      <th>away_team</th>\n",
-       "      <th>result</th>\n",
-       "      <th>overall_result</th>\n",
-       "      <th>home_score</th>\n",
-       "      <th>home_penalties</th>\n",
-       "      <th>...</th>\n",
-       "      <th>away_prior_SCA</th>\n",
-       "      <th>away_prior_GCA</th>\n",
-       "      <th>away_prior_Cmp</th>\n",
-       "      <th>away_prior_Att</th>\n",
-       "      <th>away_prior_Cmp%</th>\n",
-       "      <th>away_prior_PrgP</th>\n",
-       "      <th>away_prior_Carries</th>\n",
-       "      <th>away_prior_PrgC</th>\n",
-       "      <th>away_prior_Att_TakeOn</th>\n",
-       "      <th>away_prior_Succ</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2024-03-03</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>NE Revolution</td>\n",
-       "      <td>Toronto FC</td>\n",
-       "      <td>L 0–1</td>\n",
-       "      <td>L</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2024-03-17</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>NE Revolution</td>\n",
-       "      <td>FC Cincinnati</td>\n",
-       "      <td>L 1–2</td>\n",
-       "      <td>L</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.227273</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>33.227273</td>\n",
-       "      <td>41.590909</td>\n",
-       "      <td>77.390909</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>26.181818</td>\n",
-       "      <td>1.136364</td>\n",
-       "      <td>2.272727</td>\n",
-       "      <td>1.045455</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2024-03-23</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>NE Revolution</td>\n",
-       "      <td>Chicago Fire</td>\n",
-       "      <td>D 1–1</td>\n",
-       "      <td>D</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.045455</td>\n",
-       "      <td>0.318182</td>\n",
-       "      <td>38.545455</td>\n",
-       "      <td>47.227273</td>\n",
-       "      <td>81.131818</td>\n",
-       "      <td>3.681818</td>\n",
-       "      <td>31.272727</td>\n",
-       "      <td>1.454545</td>\n",
-       "      <td>1.727273</td>\n",
-       "      <td>0.590909</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2024-04-06</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>NE Revolution</td>\n",
-       "      <td>Charlotte</td>\n",
-       "      <td>W 1–0</td>\n",
-       "      <td>W</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.878788</td>\n",
-       "      <td>0.212121</td>\n",
-       "      <td>26.636364</td>\n",
-       "      <td>34.818182</td>\n",
-       "      <td>75.272727</td>\n",
-       "      <td>2.757576</td>\n",
-       "      <td>21.848485</td>\n",
-       "      <td>1.363636</td>\n",
-       "      <td>0.787879</td>\n",
-       "      <td>0.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2024-05-18</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>NE Revolution</td>\n",
-       "      <td>Philadelphia Union</td>\n",
-       "      <td>L 0–3</td>\n",
-       "      <td>L</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.787879</td>\n",
-       "      <td>0.181818</td>\n",
-       "      <td>30.893939</td>\n",
-       "      <td>40.106061</td>\n",
-       "      <td>75.646875</td>\n",
-       "      <td>3.939394</td>\n",
-       "      <td>27.106061</td>\n",
-       "      <td>1.530303</td>\n",
-       "      <td>0.893939</td>\n",
-       "      <td>0.393939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1482</th>\n",
-       "      <td>42808</td>\n",
-       "      <td>2022-05-28</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>Sporting KC</td>\n",
-       "      <td>Vancouver W'caps</td>\n",
-       "      <td>L 0–1</td>\n",
-       "      <td>L</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.651515</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>27.363636</td>\n",
-       "      <td>36.015152</td>\n",
-       "      <td>75.268182</td>\n",
-       "      <td>3.348485</td>\n",
-       "      <td>23.484848</td>\n",
-       "      <td>1.166667</td>\n",
-       "      <td>0.893939</td>\n",
-       "      <td>0.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1483</th>\n",
-       "      <td>42811</td>\n",
-       "      <td>2022-07-03</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>Sporting KC</td>\n",
-       "      <td>NY Red Bulls</td>\n",
-       "      <td>L 0–1</td>\n",
-       "      <td>L</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.959596</td>\n",
-       "      <td>0.191919</td>\n",
-       "      <td>25.606061</td>\n",
-       "      <td>36.373737</td>\n",
-       "      <td>69.514141</td>\n",
-       "      <td>3.272727</td>\n",
-       "      <td>22.616162</td>\n",
-       "      <td>1.333333</td>\n",
-       "      <td>1.373737</td>\n",
-       "      <td>0.707071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1484</th>\n",
-       "      <td>43302</td>\n",
-       "      <td>2022-04-09</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>Sporting KC</td>\n",
-       "      <td>Nashville SC</td>\n",
-       "      <td>L 1–2</td>\n",
-       "      <td>L</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1485</th>\n",
-       "      <td>43304</td>\n",
-       "      <td>2022-04-23</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>Sporting KC</td>\n",
-       "      <td>Columbus Crew</td>\n",
-       "      <td>D 0–0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.416667</td>\n",
-       "      <td>0.187500</td>\n",
-       "      <td>39.562500</td>\n",
-       "      <td>48.000000</td>\n",
-       "      <td>80.537500</td>\n",
-       "      <td>4.354167</td>\n",
-       "      <td>37.958333</td>\n",
-       "      <td>2.083333</td>\n",
-       "      <td>1.750000</td>\n",
-       "      <td>0.854167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1486</th>\n",
-       "      <td>43311</td>\n",
-       "      <td>2022-06-12</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Regular Season</td>\n",
-       "      <td>Sporting KC</td>\n",
-       "      <td>NE Revolution</td>\n",
-       "      <td>L 1–2</td>\n",
-       "      <td>L</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.048193</td>\n",
-       "      <td>0.204819</td>\n",
-       "      <td>37.975904</td>\n",
-       "      <td>47.192771</td>\n",
-       "      <td>78.650602</td>\n",
-       "      <td>4.469880</td>\n",
-       "      <td>33.289157</td>\n",
-       "      <td>1.542169</td>\n",
-       "      <td>1.361446</td>\n",
-       "      <td>0.891566</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1487 rows × 67 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      index   game_date  day           round      home_team  \\\n",
-       "0         1  2024-03-03  Sun  Regular Season  NE Revolution   \n",
-       "1         3  2024-03-17  Sun  Regular Season  NE Revolution   \n",
-       "2         4  2024-03-23  Sat  Regular Season  NE Revolution   \n",
-       "3         5  2024-04-06  Sat  Regular Season  NE Revolution   \n",
-       "4         7  2024-05-18  Sat  Regular Season  NE Revolution   \n",
-       "...     ...         ...  ...             ...            ...   \n",
-       "1482  42808  2022-05-28  Sat  Regular Season    Sporting KC   \n",
-       "1483  42811  2022-07-03  Sun  Regular Season    Sporting KC   \n",
-       "1484  43302  2022-04-09  Sat  Regular Season    Sporting KC   \n",
-       "1485  43304  2022-04-23  Sat  Regular Season    Sporting KC   \n",
-       "1486  43311  2022-06-12  Sun  Regular Season    Sporting KC   \n",
-       "\n",
-       "               away_team result overall_result  home_score  home_penalties  \\\n",
-       "0             Toronto FC  L 0–1              L           0               0   \n",
-       "1          FC Cincinnati  L 1–2              L           1               0   \n",
-       "2           Chicago Fire  D 1–1              D           1               0   \n",
-       "3              Charlotte  W 1–0              W           1               0   \n",
-       "4     Philadelphia Union  L 0–3              L           0               0   \n",
-       "...                  ...    ...            ...         ...             ...   \n",
-       "1482    Vancouver W'caps  L 0–1              L           0               0   \n",
-       "1483        NY Red Bulls  L 0–1              L           0               0   \n",
-       "1484        Nashville SC  L 1–2              L           1               0   \n",
-       "1485       Columbus Crew  D 0–0              D           0               0   \n",
-       "1486       NE Revolution  L 1–2              L           1               0   \n",
-       "\n",
-       "      ...  away_prior_SCA  away_prior_GCA away_prior_Cmp away_prior_Att  \\\n",
-       "0     ...        0.000000        0.000000       0.000000       0.000000   \n",
-       "1     ...        2.227273        0.000000      33.227273      41.590909   \n",
-       "2     ...        2.045455        0.318182      38.545455      47.227273   \n",
-       "3     ...        1.878788        0.212121      26.636364      34.818182   \n",
-       "4     ...        2.787879        0.181818      30.893939      40.106061   \n",
-       "...   ...             ...             ...            ...            ...   \n",
-       "1482  ...        1.651515        0.166667      27.363636      36.015152   \n",
-       "1483  ...        1.959596        0.191919      25.606061      36.373737   \n",
-       "1484  ...        0.000000        0.000000       0.000000       0.000000   \n",
-       "1485  ...        2.416667        0.187500      39.562500      48.000000   \n",
-       "1486  ...        2.048193        0.204819      37.975904      47.192771   \n",
-       "\n",
-       "      away_prior_Cmp%  away_prior_PrgP  away_prior_Carries  away_prior_PrgC  \\\n",
-       "0            0.000000         0.000000            0.000000         0.000000   \n",
-       "1           77.390909         2.500000           26.181818         1.136364   \n",
-       "2           81.131818         3.681818           31.272727         1.454545   \n",
-       "3           75.272727         2.757576           21.848485         1.363636   \n",
-       "4           75.646875         3.939394           27.106061         1.530303   \n",
-       "...               ...              ...                 ...              ...   \n",
-       "1482        75.268182         3.348485           23.484848         1.166667   \n",
-       "1483        69.514141         3.272727           22.616162         1.333333   \n",
-       "1484         0.000000         0.000000            0.000000         0.000000   \n",
-       "1485        80.537500         4.354167           37.958333         2.083333   \n",
-       "1486        78.650602         4.469880           33.289157         1.542169   \n",
-       "\n",
-       "      away_prior_Att_TakeOn  away_prior_Succ  \n",
-       "0                  0.000000         0.000000  \n",
-       "1                  2.272727         1.045455  \n",
-       "2                  1.727273         0.590909  \n",
-       "3                  0.787879         0.333333  \n",
-       "4                  0.893939         0.393939  \n",
-       "...                     ...              ...  \n",
-       "1482               0.893939         0.500000  \n",
-       "1483               1.373737         0.707071  \n",
-       "1484               0.000000         0.000000  \n",
-       "1485               1.750000         0.854167  \n",
-       "1486               1.361446         0.891566  \n",
-       "\n",
-       "[1487 rows x 67 columns]"
-      ]
-     },
-     "execution_count": 319,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
    ]
   },
   {
@@ -4375,6 +3978,54 @@
    ],
    "source": [
     "upcoming_game."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from joblib import dump, load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dump(dtr, output/'dtr_mvp.joblib')\n",
+    "# dtr_test = load(output / 'dtr_mvp.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 6., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 364,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtr_test.predict(upcoming_final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dump(encoder, output/'encoder_mvp.joblib')"
    ]
   },
   {
