saving current progress

--- a/notebooks/data_extraction.ipynb
+++ b/notebooks/data_extraction.ipynb
@@ -142,6 +142,13 @@
     "    if len(failed_links)>0:\n",
     "        player_data_df, failed_links = generate_player_df(failed_links, player_data_df)\n",
     "\n",
+    "    correct_col_names = ['Date', 'Day', 'Comp', 'Round', 'Venue', 'Result', 'Squad', 'Opponent',\n",
+    "       'Start', 'Pos', 'Min', 'Gls', 'Ast', 'PK', 'PKatt', 'Sh', 'SoT', 'CrdY',\n",
+    "       'CrdR', 'Touches', 'Tkl', 'Int', 'Blocks', 'xG', 'npxG', 'xAG', 'SCA',\n",
+    "       'GCA', 'Cmp', 'Att', 'Cmp%', 'PrgP', 'Carries', 'PrgC', 'Att_TakeOn', 'Succ',\n",
+    "       'Match Report', 'player_url']\n",
+    "    player_data_df.columns = correct_col_names\n",
+    "\n",
     "    return player_data_df, failed_links \n",
     "\n",
     "def generate_player_df(player_links, df=pd.DataFrame()) -> tuple[pd.DataFrame, list]:\n",
@@ -243,7 +250,7 @@
     "\n",
     "# this page gives me a bunch of tables for team stats in the current moment\n",
     "# not sure how much of the data here will be useful, but I'll grab it just-in-case\n",
-    "html = get_html_data(base_url + 'players/')"
+    "# html = get_html_data(base_url + 'players/')"
    ]
   },
   {
@@ -252,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_stat_dfs = get_table_data_from_html(html)"
+    "# team_stat_dfs = get_table_data_from_html(html)"
    ]
   },
   {
@@ -288,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_data_2024_df.to_csv(output/\"mls_2024\"/\"all_player_data_2024.csv\")"
+    "player_data_2024_df.to_csv(output/\"mls_2024\"/\"all_player_data_2024.csv\", index=False)"
    ]
   },
   {
@@ -335,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_data_2023_df.to_csv(output/\"mls_2023\"/\"all_player_data_2023.csv\")"
+    "player_data_2023_df.to_csv(output/\"mls_2023\"/\"all_player_data_2023.csv\", index=False)"
    ]
   },
   {
@@ -369,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_data_2022_df.to_csv(output/\"mls_2022\"/\"all_player_data_2022.csv\")"
+    "player_data_2022_df.to_csv(output/\"mls_2022\"/\"all_player_data_2022.csv\", index=False)"
    ]
   }
  ],
